--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,58 @@ footer button {
 
 
 @media (min-width:768px) {
+  /*start of footer*/
+
+    footer {
+        margin-top: 15%;
+        display: flex;
+    }
+    footer input {
+        width: 120px;
+    }
+    footer figure {
+        width: 20%;
+        margin-bottom: 5%;
+        margin: auto;
+    }
+    footer article {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: flex-end;
+        border-radius: 20px;
+        margin-right: 2%;
+        background-color: #e9e9e9;
+        height: 100px;
+        border: 1px solid lightgrey;
+    }
+    footer article h5 {
+        font-size: 15px;
+        font-weight: lighter;
+        color: grey;
+        margin: auto;
+        font-family: 'Droid Serif', serif;
+    }
+    footer nav {
+        width: 100%;
+        margin-right: 5%;
+    }
+    footer nav ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+    }
+    footer nav li {
+        display: flex;
+        margin-right: 2%;
+        font-family: 'Droid Serif', serif;
+    }
+
+    /*end of footer rules*/
+
+
+}
+
+
+@media (min-width:1280px) {
