--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,29 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 a:hover {
-    color: black;
-    text-decoration: underline;
-    font-weight: bolder;
+  color: black;
+  text-decoration: underline;
+  font-weight: bolder;
 }
 
 header, .maincontainer, .chausettesize ul, .imgarticle, .chausette span, .footer {
-    display: flex;
+  display: flex;
 }
 
 .navchausette, .mainnav, .panier, .navblog, .tablet, .desktop {
-    display: none;
+  display: none;
 }
 
 .logo, header, footer {
-    width: 100%;
+  width: 100%;
 }
 
 /* ==========================================================================
@@ -35,17 +35,17 @@ header, .maincontainer, .chausettesize ul, .imgarticle, .chausette span, .footer
 }
 
 .logo figure {
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 5px;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 5px;
 }
 
 .logo img {
-    width: 175px;
-    height: 50.5px;
+  width: 175px;
+  height: 50.5px;
 }
 
 #panier {
@@ -53,12 +53,12 @@ header, .maincontainer, .chausettesize ul, .imgarticle, .chausette span, .footer
 }
 
 header {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    margin-bottom: 30px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  margin-bottom: 30px;
 }
 
 /*$$$$$$$$$$$$$$$$MAIN$$$$$$$$$$$$$$$$$$$$$*/
@@ -67,116 +67,116 @@ div {
 }
 
 h1 {
-    width: 90%;
-    margin: 100px 0 0 auto;
-    font-family: inherit;
-    font-weight: 500;
-    padding-bottom: 10px;
+  width: 90%;
+  margin: 100px 0 0 auto;
+  font-family: inherit;
+  font-weight: 500;
+  padding-bottom: 10px;
 }
 
 .chausettesize {
-    width: 90%;
-    margin: auto;
-    padding-bottom: 10px;
+  width: 90%;
+  margin: auto;
+  padding-bottom: 10px;
 }
 
 .chausettesize ul {
-    list-style-type: none;
-    flex-wrap: wrap;
+  list-style-type: none;
+  flex-wrap: wrap;
 }
 
 .chausettesize ul li {
-    width: 62px;
-    height: 26px;
-    background-color: rgba(240, 240, 240);
-    margin-left: 7px;
-    margin-bottom: 7px;
-    border-radius: 4px;
-    padding: 2px;
-    text-align: center;
+  width: 62px;
+  height: 26px;
+  background-color: rgba(240, 240, 240);
+  margin-left: 7px;
+  margin-bottom: 7px;
+  border-radius: 4px;
+  padding: 2px;
+  text-align: center;
 }
 
 .chausettesize li:first-child {
-    background-color: #4A4A4C;
+  background-color: #4A4A4C;
 }
 
 .chausettesize li:first-child a {
-    color: white;
+  color: white;
 }
 
 .chausettesize ul li a {
-    display: block;
-    width: 80%;
-    margin: auto;
-    color: #A3A3A3;
+  display: block;
+  width: 80%;
+  margin: auto;
+  color: #A3A3A3;
 }
 
 
 /*$$$$$$$$$$$$$$$$$$$$$$FOOTER$$$$$$$$$$$$$$$*/
 
 .face, .twitter {
-    display: none;
+  display: none;
 }
 
 footer ul {
-    list-style: none;
+  list-style: none;
 }
 
 footer h5 {
-    font-size: 10px;
-    color: grey;
+  font-size: 10px;
+  color: grey;
 }
 
 footer li {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 footer {
-    display: flex;
-    flex-direction: column;
-    flex-flow: wrap;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
 
 footer article {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 40%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 40%;
 }
 
 footer figure {
-    width: 40%;
+  width: 40%;
 }
 
 footer nav ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 footer nav li {
-    color: grey;
+  color: grey;
 }
 
 footer input {
-    width: 200px;
-    height: 29px;
-    border: 1px solid grey;
-    border-radius: 5px;
-    background-color: white;
+  width: 200px;
+  height: 29px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  background-color: white;
 }
 
 footer button {
-    width: 40px;
-    height: 31px;
-    border-radius: 0;
-    border: 1px solid grey;
-    font-size: 12px;
-    background-color: white;
+  width: 40px;
+  height: 31px;
+  border-radius: 0;
+  border: 1px solid grey;
+  font-size: 12px;
+  background-color: white;
 }
 
 footer article img {
@@ -193,54 +193,58 @@ footer article img {
   display: block;
 }
 
-    footer {
-        margin-top: 35%;
-        display: flex;
-    }
-    footer input {
-        width: 120px;
-    }
-    footer figure {
-        width: 20%;
-        margin-bottom: 5%;
-        margin: auto;
-    }
-    footer article {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-items: flex-end;
-        border-radius: 20px;
-        margin-right: 2%;
-        background-color: #e9e9e9;
-        height: 100px;
-        border: 1px solid lightgrey;
-    }
-    footer article h5 {
-        font-size: 15px;
-        font-weight: lighter;
-        color: grey;
-        margin: auto;
-        font-family: 'Droid Serif', serif;
-    }
-    footer nav {
-        width: 100%;
-        margin-right: 5%;
-    }
-    footer nav ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        width: 100%;
-    }
-    footer nav li {
-        display: flex;
-        margin-right: 2%;
-        font-family: 'Droid Serif', serif;
-    }
+footer {
+  margin-top: 35%;
+  display: flex;
+}
 
-    /*end of footer rules*/
+footer input {
+  width: 120px;
+}
 
+footer figure {
+  width: 20%;
+  margin-bottom: 5%;
+  margin: auto;
+}
+
+footer article {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  border-radius: 20px;
+  margin-right: 2%;
+  background-color: #e9e9e9;
+  height: 100px;
+  border: 1px solid lightgrey;
+}
+
+footer article h5 {
+  font-size: 15px;
+  font-weight: lighter;
+  color: grey;
+  margin: auto;
+  font-family: 'Droid Serif', serif;
+}
+
+footer nav {
+  width: 100%;
+  margin-right: 5%;
+}
+
+footer nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+footer nav li {
+  display: flex;
+  margin-right: 2%;
+  font-family: 'Droid Serif', serif;
+}
 
 }
 
@@ -253,112 +257,133 @@ footer article img {
 }
 
 header, .maincontainer, .footer {
-        width: 65%;
-        margin: auto;
-    }
-    .logo i {
-        display: none;
-    }
-    .navchausette {
-        width: 100%;
-    }
-    footer {
-        background-color: lightgrey;
-        padding-top: 35px;
-    }
-    .tablet {
-        display: none;
-    }
-    .desktop {
-        display: block;
+  width: 65%;
+  margin: auto;
+}
+
+.logo i {
+  display: none;
+}
+
+.navchausette {
+  width: 100%;
+}
+
+footer {
+  background-color: lightgrey;
+  padding-top: 35px;
+}
+
+.tablet {
+  display: none;
+}
+
+.desktop {
+  display: block;
 }
 
 .backgroundheader {
-        width: 100%;
-        background-color: #F4F4F1;
-    }
-    header {
-        position: inherit;
-        box-shadow: inherit;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 30px;
-    }
-    h1 {
-        width: 100%;
-    }
-    .navchausette, .mainnav, .panier {
-        display: block;
-    }
-    .logo {
-        width: 30%;
+  width: 100%;
+  background-color: #F4F4F1;
+}
+
+header {
+  position: inherit;
+  box-shadow: inherit;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+h1 {
+  width: 100%;
+}
+
+.navchausette, .mainnav, .panier {
+  display: block;
+}
+
+.logo {
+  width: 30%;
 }
 
 .mainnav {
-       width: 20%;
-   }
-   .mainnav ul {
-       display: flex;
-       justify-content: space-around;
-   }
-   .mainnav ul li {
-       padding: 5px;
-   }
-   .mainnav ul li:hover {
-       background-color: white;
-       border-radius: 4px;
-   }
-   .mainnav ul li a:hover {
-       text-decoration: none;
-       font-weight: inherit;
-   }
-   .logo figure, .logo img {
-       width: 100%;
-       height: auto;
-       margin: auto;
-   }
-   .mainnav ul, .navchausette ul {
-       display: flex;
-       list-style-type: none;
-       flex-wrap: wrap;
-   }
-   .navchausette ul {
-       justify-content: space-between;
-       align-items: center;
-       width: 100%;
-   }
-   .navchausette img, .navchausette figure {
-       width: 56px;
-       height: 56px;
-   }
-   .navchausette figure {
-       margin: 0;
-   }
-   .navchausette ul li {
-       width: 16%;
-   }
-   .navchausette ul li a {
-       display: flex;
-       width: 100%;
-       height: auto;
-       align-items: center;
-       padding: 0 7px;
-   }
-   .navchausette p {
-       font-size: 10px;
-       color: #555;
-       width: 90%;
-       text-decoration: none;
-   }
-   .navchausette span {
-       font-size: 16px;
-       text-decoration: none;
-   }
-   .navchausette ul li:first-child {
-       background-color: white;
-       border-top-left-radius: 5px;
-       border-top-right-radius: 5px;
+  width: 20%;
+}
+
+.mainnav ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+.mainnav ul li {
+  padding: 5px;
+}
+
+.mainnav ul li:hover {
+  background-color: white;
+  border-radius: 4px;
+}
+
+.mainnav ul li a:hover {
+  text-decoration: none;
+  font-weight: inherit;
+}
+
+.logo figure, .logo img {
+  width: 100%;
+  height: auto;
+  margin: auto;
+}
+
+.mainnav ul, .navchausette ul {
+  display: flex;
+  list-style-type: none;
+  flex-wrap: wrap;
+}
+
+.navchausette ul {
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.navchausette img, .navchausette figure {
+  width: 56px;
+  height: 56px;
+}
+
+.navchausette figure {
+  margin: 0;
+}
+
+.navchausette ul li {
+  width: 16%;
+}
+
+.navchausette ul li a {
+  display: flex;
+  width: 100%;
+  height: auto;
+  align-items: center;
+  padding: 0 7px;
+}
+
+.navchausette p {
+  font-size: 10px;
+  color: #555;
+  width: 90%;
+}
+
+.navchausette span {
+  font-size: 16px;
+}
+
+.navchausette ul li:first-child {
+  background-color: white;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 /*$$$$$$$$$$$$$$$$$MAIN$$$$$$$$$$$$$$$$*/
@@ -368,26 +393,43 @@ div img {
 }
 
 .chausettesize ul {
-        position: fixed;
-        flex-direction: column;
-        right: 35px;
-        top: 300px;
-        z-index: 2;
-    }
-    .chausette {
-        width: 22%;
-    }
-    .chausetteimg {
-        width: 44%;
+  position: fixed;
+  flex-direction: column;
+  right: 35px;
+  top: 300px;
+  z-index: 2;
+}
+
+.chausette {
+  width: 22%;
+}
+
+.chausetteimg {
+  width: 44%;
 }
 
   /*$$$$$$$$$$$$$$$$$$FOOTER$$$$$$$$$$$$*/
-   footer article {
-        margin-right: 5%;
-    }
-
-    footer input {
-        width: 200px;
+footer {
+  margin-top: 50px;
 }
 
+footer article {
+  margin-right: 5%;
+}
+
+footer input {
+  width: 200px;
+}
+
+}
+
+
+
+/*$$$$$$$$$$$$$$CONTACT$$$$$$$$$$$$$$$$*/
+#success_message{
+  display: none;
+}
+
+iframe {
+  width: 100%;
 }
